updated work experience

--- a/index.html
+++ b/index.html
@@ -64,6 +64,19 @@
     </div>
     <div class="row job">
       <div class="col m12 l2">
+        <img src="images/bluwave-logo.jpg">  
+      </div>
+      <div class="col m12 l10">
+        <div class="job-name">
+          <h3>BluWave-ai</h3>
+          <h4>Software Developer, May - August 2019</h4>
+        </div>
+        <p>Developed backend services consisting of REST API, and Azure Edge module written in Go, and Python for latest release.
+          Designed and wrote unit tests for each feature, along with creating new Jenkins jobs to push newest changes to Edge.</p>
+      </div>
+    </div>
+    <div class="row job">
+      <div class="col m12 l2">
         <img src="images/Ford_logo.jpg">  
       </div>
       <div class="col m12 l10">
